tests/od2trips/errors/format/o/o_factor_missing/input_od_o.fma
$OR;D2
* From-Time  To-Time
0.00 1.00
* Factor
*
* some
* additional
* comments
         1          2          100

